cmake_minimum_required(VERSION 3.2)
project(cpp_bomberman)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories("includes")

set(SOURCE_FILES
    includes/GL/glew.h
    includes/GL/glxew.h
    includes/GL/wglew.h
    includes/glm/CMakeFiles/CompilerIdC/CMakeCCompilerId.c
    includes/glm/CMakeFiles/CompilerIdCXX/CMakeCXXCompilerId.cpp
    includes/glm/core/_detail.hpp
    includes/glm/core/_fixes.hpp
    includes/glm/core/_swizzle.hpp
    includes/glm/core/_swizzle_func.hpp
    includes/glm/core/_vectorize.hpp
    includes/glm/core/dummy.cpp
    includes/glm/core/func_common.hpp
    includes/glm/core/func_exponential.hpp
    includes/glm/core/func_geometric.hpp
    includes/glm/core/func_integer.hpp
    includes/glm/core/func_matrix.hpp
    includes/glm/core/func_noise.hpp
    includes/glm/core/func_packing.hpp
    includes/glm/core/func_trigonometric.hpp
    includes/glm/core/func_vector_relational.hpp
    includes/glm/core/hint.hpp
    includes/glm/core/intrinsic_common.hpp
    includes/glm/core/intrinsic_exponential.hpp
    includes/glm/core/intrinsic_geometric.hpp
    includes/glm/core/intrinsic_matrix.hpp
    includes/glm/core/intrinsic_trigonometric.hpp
    includes/glm/core/intrinsic_vector_relational.hpp
    includes/glm/core/setup.hpp
    includes/glm/core/type.hpp
    includes/glm/core/type_float.hpp
    includes/glm/core/type_gentype.hpp
    includes/glm/core/type_half.hpp
    includes/glm/core/type_int.hpp
    includes/glm/core/type_mat.hpp
    includes/glm/core/type_mat2x2.hpp
    includes/glm/core/type_mat2x3.hpp
    includes/glm/core/type_mat2x4.hpp
    includes/glm/core/type_mat3x2.hpp
    includes/glm/core/type_mat3x3.hpp
    includes/glm/core/type_mat3x4.hpp
    includes/glm/core/type_mat4x2.hpp
    includes/glm/core/type_mat4x3.hpp
    includes/glm/core/type_mat4x4.hpp
    includes/glm/core/type_size.hpp
    includes/glm/core/type_vec.hpp
    includes/glm/core/type_vec1.hpp
    includes/glm/core/type_vec2.hpp
    includes/glm/core/type_vec3.hpp
    includes/glm/core/type_vec4.hpp
    includes/glm/gtc/constants.hpp
    includes/glm/gtc/epsilon.hpp
    includes/glm/gtc/half_float.hpp
    includes/glm/gtc/matrix_access.hpp
    includes/glm/gtc/matrix_integer.hpp
    includes/glm/gtc/matrix_inverse.hpp
    includes/glm/gtc/matrix_transform.hpp
    includes/glm/gtc/noise.hpp
    includes/glm/gtc/quaternion.hpp
    includes/glm/gtc/random.hpp
    includes/glm/gtc/reciprocal.hpp
    includes/glm/gtc/swizzle.hpp
    includes/glm/gtc/type_precision.hpp
    includes/glm/gtc/type_ptr.hpp
    includes/glm/gtc/ulp.hpp
    includes/glm/gtx/associated_min_max.hpp
    includes/glm/gtx/bit.hpp
    includes/glm/gtx/closest_point.hpp
    includes/glm/gtx/color_cast.hpp
    includes/glm/gtx/color_space.hpp
    includes/glm/gtx/color_space_YCoCg.hpp
    includes/glm/gtx/compatibility.hpp
    includes/glm/gtx/component_wise.hpp
    includes/glm/gtx/constants.hpp
    includes/glm/gtx/epsilon.hpp
    includes/glm/gtx/euler_angles.hpp
    includes/glm/gtx/extend.hpp
    includes/glm/gtx/extented_min_max.hpp
    includes/glm/gtx/fast_exponential.hpp
    includes/glm/gtx/fast_square_root.hpp
    includes/glm/gtx/fast_trigonometry.hpp
    includes/glm/gtx/gradient_paint.hpp
    includes/glm/gtx/handed_coordinate_space.hpp
    includes/glm/gtx/inertia.hpp
    includes/glm/gtx/int_10_10_10_2.hpp
    includes/glm/gtx/integer.hpp
    includes/glm/gtx/intersect.hpp
    includes/glm/gtx/log_base.hpp
    includes/glm/gtx/matrix_cross_product.hpp
    includes/glm/gtx/matrix_interpolation.hpp
    includes/glm/gtx/matrix_major_storage.hpp
    includes/glm/gtx/matrix_operation.hpp
    includes/glm/gtx/matrix_query.hpp
    includes/glm/gtx/mixed_product.hpp
    includes/glm/gtx/multiple.hpp
    includes/glm/gtx/noise.hpp
    includes/glm/gtx/norm.hpp
    includes/glm/gtx/normal.hpp
    includes/glm/gtx/normalize_dot.hpp
    includes/glm/gtx/number_precision.hpp
    includes/glm/gtx/ocl_type.hpp
    includes/glm/gtx/optimum_pow.hpp
    includes/glm/gtx/orthonormalize.hpp
    includes/glm/gtx/perpendicular.hpp
    includes/glm/gtx/polar_coordinates.hpp
    includes/glm/gtx/projection.hpp
    includes/glm/gtx/quaternion.hpp
    includes/glm/gtx/random.hpp
    includes/glm/gtx/raw_data.hpp
    includes/glm/gtx/reciprocal.hpp
    includes/glm/gtx/rotate_vector.hpp
    includes/glm/gtx/simd_mat4.hpp
    includes/glm/gtx/simd_vec4.hpp
    includes/glm/gtx/spline.hpp
    includes/glm/gtx/std_based_type.hpp
    includes/glm/gtx/string_cast.hpp
    includes/glm/gtx/transform.hpp
    includes/glm/gtx/transform2.hpp
    includes/glm/gtx/ulp.hpp
    includes/glm/gtx/unsigned_int.hpp
    includes/glm/gtx/vec1.hpp
    includes/glm/gtx/vector_access.hpp
    includes/glm/gtx/vector_angle.hpp
    includes/glm/gtx/vector_query.hpp
    includes/glm/gtx/verbose_operator.hpp
    includes/glm/gtx/wrap.hpp
    includes/glm/virtrev/xstream.hpp
    includes/glm/ext.hpp
    includes/glm/glm.hpp
    includes/AShader.hh
    includes/Attribute.hh
    includes/BasicShader.hh
    includes/begin_code.h
    includes/Clock.hh
    includes/close_code.h
    includes/Game.hh
    includes/Geometry.hh
    includes/Input.hh
    includes/IRenderContext.hh
    includes/Model.hh
    includes/OpenGL.hh
    includes/SDL.h
    includes/SDL_assert.h
    includes/SDL_atomic.h
    includes/SDL_audio.h
    includes/SDL_bits.h
    includes/SDL_blendmode.h
    includes/SDL_clipboard.h
    includes/SDL_config.h
    includes/SDL_config_android.h
    includes/SDL_config_iphoneos.h
    includes/SDL_config_macosx.h
    includes/SDL_config_minimal.h
    includes/SDL_config_pandora.h
    includes/SDL_config_psp.h
    includes/SDL_config_windows.h
    includes/SDL_config_winrt.h
    includes/SDL_config_wiz.h
    includes/SDL_copying.h
    includes/SDL_cpuinfo.h
    includes/SDL_egl.h
    includes/SDL_endian.h
    includes/SDL_error.h
    includes/SDL_events.h
    includes/SDL_filesystem.h
    includes/SDL_gamecontroller.h
    includes/SDL_gesture.h
    includes/SDL_haptic.h
    includes/SDL_hints.h
    includes/SDL_joystick.h
    includes/SDL_keyboard.h
    includes/SDL_keycode.h
    includes/SDL_loadso.h
    includes/SDL_log.h
    includes/SDL_main.h
    includes/SDL_messagebox.h
    includes/SDL_mouse.h
    includes/SDL_mutex.h
    includes/SDL_name.h
    includes/SDL_opengl.h
    includes/SDL_opengles.h
    includes/SDL_opengles2.h
    includes/SDL_pixels.h
    includes/SDL_platform.h
    includes/SDL_power.h
    includes/SDL_quit.h
    includes/SDL_rect.h
    includes/SDL_render.h
    includes/SDL_revision.h
    includes/SDL_rwops.h
    includes/SDL_scancode.h
    includes/SDL_shape.h
    includes/SDL_stdinc.h
    includes/SDL_surface.h
    includes/SDL_system.h
    includes/SDL_syswm.h
    includes/SDL_test.h
    includes/SDL_test_assert.h
    includes/SDL_test_common.h
    includes/SDL_test_compare.h
    includes/SDL_test_crc32.h
    includes/SDL_test_font.h
    includes/SDL_test_fuzzer.h
    includes/SDL_test_harness.h
    includes/SDL_test_images.h
    includes/SDL_test_log.h
    includes/SDL_test_md5.h
    includes/SDL_test_random.h
    includes/SDL_thread.h
    includes/SDL_timer.h
    includes/SDL_touch.h
    includes/SDL_types.h
    includes/SDL_version.h
    includes/SDL_video.h
    includes/SdlContext.hh
    includes/Texture.hh
    src/BasicShader.cpp
    src/BasicShader.hh
    AObject.hpp
    Core.cpp
    Core.hpp
    CoreMap.cpp
    CoreMap.hpp
    Cube.hpp
    main.cpp
    Map.hpp
    Marvin.cpp
    Marvin.hpp
    Menu.cpp
    Menu.hpp)

add_executable(cpp_bomberman ${SOURCE_FILES})